--- a/src/app/modules/auth/code/code.page.html
+++ b/src/app/modules/auth/code/code.page.html
@@ -58,7 +58,7 @@
         <ion-row>
           <ion-col size="3">
             <ion-item lines="none">
-              <ion-input
+              <ion-input #n1 min="0" max="9" maxlength="1" (keyup)="next($event,n2)"
                 (ionFocus)="focusPhone(true)"
                 (ionBlur)="focusPhone(false)"
                 type="number"
@@ -67,7 +67,7 @@
           </ion-col>
           <ion-col size="3">
             <ion-item lines="none">
-              <ion-input
+              <ion-input  #n2 min="0" max="9" maxlength="1" (keyup)="next($event,n3)"
                 (ionFocus)="focusPhone(true)"
                 (ionBlur)="focusPhone(false)"
                 type="number"
@@ -76,7 +76,7 @@
           </ion-col>
           <ion-col size="3">
             <ion-item lines="none">
-              <ion-input
+              <ion-input #n3 min="0" max="9" maxlength="1" (keyup)="next($event,n4)"
                 (ionFocus)="focusPhone(true)"
                 (ionBlur)="focusPhone(false)"
                 type="number"
@@ -85,7 +85,7 @@
           </ion-col>
           <ion-col size="3">
             <ion-item lines="none">
-              <ion-input
+              <ion-input #n4 min="0" max="9" maxlength="1" (keyup)="next($event,'')"
                 (ionFocus)="focusPhone(true)"
                 (ionBlur)="focusPhone(false)"
                 type="number"
