--- a/src/app/modules/auth/code/code.page.scss
+++ b/src/app/modules/auth/code/code.page.scss
@@ -4,8 +4,28 @@ ion-content.background {
   }
   .auth-form ion-item{
       margin-bottom: 0px !important;
+
+
   }
 
+  ion-input{
+      text-align: center;
+      --padding-end:0px !important;
+     .native-input{
+        font-size: 24px !important;
+        padding: 0px;
+        margin: 0px;
+        font-family: "Cairo-SemiBold";
+      }
+   
+  }
+
+  ion-item::part(native){
+      padding: 6px 0px !important;
+      text-align: center;
+
+    
+  }
   .code-verification-container{
       display: flex;
       justify-content: space-between;
