--- a/src/app/modules/auth/code/code.page.html
+++ b/src/app/modules/auth/code/code.page.html
@@ -14,51 +14,15 @@
       </div>
 
       <form class="auth-form" (ngSubmit)="confirmVerificationCode()">
-
-        <!-- <div class="code-verification-container">
-        <div>
-          <ion-item lines="none">
-            <ion-input
-              (ionFocus)="focusPhone(true)"
-              (ionBlur)="focusPhone(false)"
-              type="number"
-            ></ion-input>
-          </ion-item>
-        </div>
-
-        <div>
-          <ion-item lines="none">
-            <ion-input
-              (ionFocus)="focusPhone(true)"
-              (ionBlur)="focusPhone(false)"
-              type="number"
-            ></ion-input>
-          </ion-item>
-        </div>
-        <div>
-          <ion-item lines="none">
-            <ion-input
-              (ionFocus)="focusPhone(true)"
-              (ionBlur)="focusPhone(false)"
-              type="number"
-            ></ion-input>
-          </ion-item>
-        </div>
-        <div>
-          <ion-item lines="none">
-            <ion-input
-              (ionFocus)="focusPhone(true)"
-              (ionBlur)="focusPhone(false)"
-              type="number"
-            ></ion-input>
-          </ion-item>
-        </div>
-         
-        </div> -->
         <ion-row>
           <ion-col size="3">
             <ion-item lines="none">
-              <ion-input #n1 min="0" max="9" maxlength="1" (keyup)="next($event,n2)"
+              <ion-input
+                #n1
+                min="0"
+                max="9"
+                maxlength="1"
+                (keyup)="next($event,n2)"
                 (ionFocus)="focusPhone(true)"
                 (ionBlur)="focusPhone(false)"
                 type="number"
@@ -67,7 +31,12 @@
           </ion-col>
           <ion-col size="3">
             <ion-item lines="none">
-              <ion-input  #n2 min="0" max="9" maxlength="1" (keyup)="next($event,n3)"
+              <ion-input
+                #n2
+                min="0"
+                max="9"
+                maxlength="1"
+                (keyup)="next($event,n3)"
                 (ionFocus)="focusPhone(true)"
                 (ionBlur)="focusPhone(false)"
                 type="number"
@@ -76,7 +45,12 @@
           </ion-col>
           <ion-col size="3">
             <ion-item lines="none">
-              <ion-input #n3 min="0" max="9" maxlength="1" (keyup)="next($event,n4)"
+              <ion-input
+                #n3
+                min="0"
+                max="9"
+                maxlength="1"
+                (keyup)="next($event,n4)"
                 (ionFocus)="focusPhone(true)"
                 (ionBlur)="focusPhone(false)"
                 type="number"
@@ -85,7 +59,12 @@
           </ion-col>
           <ion-col size="3">
             <ion-item lines="none">
-              <ion-input #n4 min="0" max="9" maxlength="1" (keyup)="next($event,'')"
+              <ion-input
+                #n4
+                min="0"
+                max="9"
+                maxlength="1"
+                (keyup)="next($event,'')"
                 (ionFocus)="focusPhone(true)"
                 (ionBlur)="focusPhone(false)"
                 type="number"
