--- a/src/global.scss
+++ b/src/global.scss
@@ -149,6 +149,11 @@
     .auth-form {
       margin: 24px 16px;
 
+      .otp{
+        font-size: 24px;
+        --padding-bottom:0px !important;
+        --padding-top:0px !important;
+      }
       ion-row {
         ion-col {
           //padding: 0px ;
