--- a/src/global.scss
+++ b/src/global.scss
@@ -149,6 +149,7 @@
     .auth-form {
       margin: 24px 16px;
 
+
       .otp{
         font-size: 24px;
         --padding-bottom:0px !important;
@@ -191,6 +192,13 @@
       .auth-btn {
         font-size: 16px;
         font-family: "Cairo-Bold";
+      }
+
+      .error-box{
+        color: red;
+        margin: 10px auto;
+        font-size: 12px;
+        text-align: center;
       }
     }
   }
