--- a/src/app/modules/auth/login-register/login-register.page.scss
+++ b/src/app/modules/auth/login-register/login-register.page.scss
@@ -7,5 +7,5 @@ ion-content.bg-right {
     no-repeat;
 }
 
-input:focus { border-color: var(--ion-color-primary); }
+//input:focus { border-color: var(--ion-color-primary); }
 
