--- a/src/app/modules/main/main.page.scss
+++ b/src/app/modules/main/main.page.scss
@@ -1,4 +1,45 @@
-ion-content.background {
-    --background: url(../../../assets/images/mainBg.svg) 0 0 /100% 100% no-repeat;
+// ion-content.background {
+//     --background: url(../../../assets/images/mainBg.svg) 0 0 /100% 100% no-repeat;
+//   }
+
+
+ion-header{
+
+  .menu-container{
+    position: relative;
+    img {
+      width: 100%;
+    }
   }
+
+  .menu-icon{
+    position: absolute;
+    top: 30%;
+    right: 16px;
+    img {
+      width: 40px;
+      height: 40px;
+    }
+  }
+
+  .menu-title{
+    position: absolute;
+    top: 37%;
+    right: 21%;
+    font-size: 18px;
+    color: var(--ion-color-primary);
+    font-weight: bold;
+    p{
+      margin: 0px;
+    }
+  }
+ 
+}
+
+.search-section{
+  .search-wrapper{
+    border: 1px solid #E1E1E1;
+    border-radius: 25px;
+  }
+}
   
