--- a/src/app/modules/main/main.page.scss
+++ b/src/app/modules/main/main.page.scss
@@ -41,5 +41,105 @@ ion-header{
     border: 1px solid #E1E1E1;
     border-radius: 25px;
   }
+
+  ion-fab-button{
+
+
+    
+    ion-icon{
+      font-size: 16px;
+    }
+  }
+  ion-fab-button::part(native){
+    button.button-native{
+      height: 40px !important;
+      width: 40px !important;
+    }
+  }
+
 }
   
+.slider-section{
+  img{
+    border-radius: 10px;
+  }
+  //margin-bottom: 23px;
+}
+
+.categories-section{
+  .categories-title{
+    font-size: 18px;
+    font-family: "Cairo-Bold";
+  }
+
+  .categories-sub-title{
+    font-size: 14px;
+    font-family: "Cairo-Regular";
+    color:var(--ion-color-secondary);
+    white-space: nowrap;
+  }
+
+  ion-item::part(native){
+    padding-inline-start:0px;
+
+  }
+}
+
+.naerby-section{
+  margin-bottom: 23px;
+  .categories-title{
+    font-size: 18px;
+    font-family: "Cairo-Bold";
+  }
+
+  .categories-sub-title{
+    font-size: 14px;
+    font-family: "Cairo-Regular";
+    color:var(--ion-color-secondary);
+    white-space: nowrap;
+  }
+  ion-item::part(native){
+    padding-inline-start:0px;
+
+  }
+
+  .container{
+    position: relative;
+    img{
+      width: 160px;
+      height: 140px;
+      object-fit: cover;
+      object-position: initial;
+      border-radius: 10px;
+    }
+
+    .title{
+      
+      position: absolute;
+      bottom: 5px;
+      color: white;
+     p{
+       font-size: 14px;
+       font-family: "Cairo-Bold";
+     }
+    }
+
+    .address{
+      position: absolute;
+      bottom: 5px;
+      color: white;
+      font-size: 14px;
+      font-family: "Cairo-Regular";
+      .location{
+        right: 10px;
+      }
+
+      .location-address{
+
+      }
+      .address-detail{
+        left: 10px;
+      }
+    }
+  }
+}
