--- a/src/app/modules/onboarding/on-boarding/on-boarding.page.html
+++ b/src/app/modules/onboarding/on-boarding/on-boarding.page.html
@@ -15,6 +15,9 @@
             <ion-button expand="block" class="btn-custom">
               <span>{{"next"|translate}}</span>
             </ion-button>
+
+
+            <app-custom-button></app-custom-button>
           </ion-col>
 
           <ion-col text-center size="2" (click)="skipBoarding()">
