--- a/src/app/components/custom-button/custom-button.component.html
+++ b/src/app/components/custom-button/custom-button.component.html
@@ -1,3 +1,3 @@
-<p>
-  custom-button works!
-</p>
+<ion-button expand="block" class="btn-custom">
+  <span>{{"next"|translate}}</span>
+</ion-button>
