--- a/src/app/modules/onboarding/on-boarding/on-boarding.page.html
+++ b/src/app/modules/onboarding/on-boarding/on-boarding.page.html
@@ -17,7 +17,7 @@
             </ion-button>
 
 
-            <app-custom-button></app-custom-button>
+            <!-- <app-custom-button></app-custom-button> -->
           </ion-col>
 
           <ion-col text-center size="2" (click)="skipBoarding()">
