--- a/src/app/modules/categories/categories.page.html
+++ b/src/app/modules/categories/categories.page.html
@@ -1,4 +1,21 @@
 <ion-header class="ion-no-border">
+<!-- 
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button autoHide="false"></ion-menu-button>
+  
+    </ion-buttons>
+   
+    <ion-title>Left side menu toggle</ion-title>
+
+    <ion-buttons slot="end">
+      <ion-button routerLink="/tabs/main">
+        <ion-icon name="arrow-back-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar> -->
+
+
   <div class="menu-container">
     <img src="./../../../assets/images/wave app.svg" />
 
@@ -7,11 +24,30 @@
     </div>
 
     <div class="menu-title">
-      <p>{{"main"|translate}}</p>
+      <p>{{ "categories"|translate}}</p>
+    </div>
+
+    <div class="back-icon"  routerLink="/tabs/main">
+      <ion-icon name="arrow-forward-outline" color="primary" ></ion-icon>
     </div>
   </div>
 </ion-header>
 
-<ion-content>
+<ion-content >
+  <!-- class="ion-no-margin" -->
+  <ion-grid>
+    <ion-row>
+      <ion-col size="6" *ngFor="let cat of categories">
+        <ion-card class="ion-no-margin" routerLink="/tabs/main/category-list" >
+          <ion-item>
+            <ion-thumbnail>
+              <img [src]="cat.image" />
+            </ion-thumbnail>
+            <ion-label> {{cat.name|translate}} </ion-label>
+          </ion-item>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
 </ion-content>
