--- a/src/app/modules/categories/categories.page.scss
+++ b/src/app/modules/categories/categories.page.scss
@@ -1,6 +1,58 @@
-.menu-container{
-    position: relative;
+.menu-container {
+  position: relative;
+  img {
+    width: 100%;
+  }
+}
+
+ion-header {
+  .menu-icon {
+    position: absolute;
+    top: 30%;
+    right: 16px;
     img {
-      width: 100%;
+      width: 40px;
+      height: 40px;
     }
   }
+
+  .menu-title {
+    position: absolute;
+    top: 35%;
+    right: 18%;
+    font-size: 18px;
+    color: var(--ion-color-primary);
+    font-weight: bold;
+    p {
+      margin: 0px;
+    }
+  }
+
+  .back-icon {
+    position: absolute;
+    top: 33%;
+    left: 16px;
+    ion-icon {
+      font-size: 25px;
+    }
+  }
+}
+
+ion-card {
+  ion-item::part(native) {
+    padding-inline-start: 0px;
+  }
+
+  ion-thumbnail {
+    margin: 15px;
+
+    img {
+      border-radius: 5px;
+    }
+  }
+
+  ion-label {
+    font-size: 16px;
+    font-family: "Cairo-SemiBold";
+  }
+}
