--- a/src/app/modules/main/main.page.scss
+++ b/src/app/modules/main/main.page.scss
@@ -1,52 +1,15 @@
 // ion-content.background {
 //     --background: url(../../../assets/images/mainBg.svg) 0 0 /100% 100% no-repeat;
 //   }
-
-.swiper-pagination-bullet-active {
-  background-color: var(--ion-color-primary) !important;
-  height: 10px;
-  width: 30px !important;
-  border-radius: 10px;
-  height: 20 !important;
-}
-.swiper-pagination swiper-pagination-bullets swiper-pagination-horizontal {
-  height: 20 !important;
-}
-.swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet,
-.swiper-pagination-horizontal.swiper-pagination-bullets
-  .swiper-pagination-bullet {
-  background-color: var(--ion-color-primary) !important;
-  height: 10px;
-  width: 15px;
-  border-radius: 10px;
+.menu-container {
+  position: relative;
+  img {
+    width: 100%;
+  }
 }
 
-.swiper-pagination-bullet-inactive {
-  background-color: rgba(var(--ion-color-primary), 0.5) !important;
-  height: 10px;
-  width: 15px;
-  border-radius: 10px;
-  opacity: 0.5;
-}
-
-.swiper-pagination-bullets {
-  top: 23% !important;
-
-  right: 36px;
-
-  left: 32px !important;
-
-  height: fit-content;
-}
-
-.swiper-pagination.swiper-pagination-bullets.swiper-pagination-horizontal {
-  height: 21 !important;
-  display: block;
-}
-ion-header{
-
- 
-  .menu-icon{
+ion-header {
+  .menu-icon {
     position: absolute;
     top: 30%;
     right: 16px;
@@ -56,94 +19,142 @@ ion-header{
     }
   }
 
-  .menu-title{
+  .menu-title {
     position: absolute;
     top: 37%;
-    right: 21%;
+    right: 18%;
     font-size: 18px;
     color: var(--ion-color-primary);
     font-weight: bold;
-    p{
+    p {
       margin: 0px;
     }
   }
- 
 }
 
-.search-section{
-
-
-
-  
-  .search-wrapper{
-    border: 1px solid #E1E1E1;
+.search-section {
+  .search-wrapper {
+    border: 1px solid #e1e1e1;
     border-radius: 25px;
   }
 
-  ion-fab-button{
-
-
-    
-    ion-icon{
+  ion-fab-button {
+    ion-icon {
       font-size: 16px;
     }
   }
-  ion-fab-button::part(native){
-    button.button-native{
+  ion-fab-button::part(native) {
+    button.button-native {
       height: 40px !important;
       width: 40px !important;
     }
   }
 
+  .filter-fab {
+    padding: 0px;
+    margin: 0px;
+
+    ion-fab-button {
+      margin: 0px;
+    }
+  }
 }
-  
-.slider-section{
-  img{
+
+.slider-section {
+  .swiper-pagination-bullet-active {
+    background-color: var(--ion-color-primary) !important;
+    height: 10px;
+    width: 30px !important;
+    border-radius: 10px;
+    height: 20 !important;
+  }
+  .swiper-pagination swiper-pagination-bullets swiper-pagination-horizontal {
+    height: 20 !important;
+  }
+  .swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet,
+  .swiper-pagination-horizontal.swiper-pagination-bullets
+    .swiper-pagination-bullet {
+    background-color: var(--ion-color-primary) !important;
+    height: 10px;
+    width: 15px;
+    border-radius: 10px;
+  }
+
+  .swiper-pagination-bullet-inactive {
+    background-color: rgba(var(--ion-color-primary), 0.5) !important;
+    height: 10px;
+    width: 15px;
+    border-radius: 10px;
+    opacity: 0.5;
+  }
+
+  .swiper-pagination-bullets {
+    top: 23% !important;
+
+    right: 36px;
+
+    left: 32px !important;
+
+    height: fit-content;
+  }
+
+  .swiper-pagination.swiper-pagination-bullets.swiper-pagination-horizontal {
+    height: 21 !important;
+    display: block;
+  }
+  img {
     border-radius: 10px;
   }
   //margin-bottom: 23px;
 }
 
-.categories-section{
-  .categories-title{
+.categories-section {
+  .cat-title-text {
+    margin: 10px;
+    font-size: 16px;
+    font-family: "Cairo-SemiBold";
+  }
+  ion-thumbnail {
+    margin: 0px;
+  }
+  .categories-title {
     font-size: 18px;
     font-family: "Cairo-Bold";
   }
 
-  .categories-sub-title{
+  .categories-sub-title {
     font-size: 14px;
     font-family: "Cairo-Regular";
-    color:var(--ion-color-secondary);
+    color: var(--ion-color-secondary);
     white-space: nowrap;
   }
 
-  ion-item::part(native){
-    padding-inline-start:0px;
-
+  ion-item::part(native) {
+    padding-inline-start: 0px;
   }
 }
 
-.naerby-section{
+.naerby-section {
   margin-bottom: 23px;
-  .categories-title{
+  .categories-title {
     font-size: 18px;
     font-family: "Cairo-Bold";
   }
 
-  .categories-sub-title{
+  .categories-sub-title {
     font-size: 14px;
     font-family: "Cairo-Regular";
-    color:var(--ion-color-secondary);
+    color: var(--ion-color-secondary);
     white-space: nowrap;
   }
-  ion-item::part(native){
-    padding-inline-start:0px;
-
+  ion-item::part(native) {
+    padding-inline-start: 0px;
   }
 
-  .container{
+  .container {
     position: relative;
-    img{
+    height: 140px;
+    img {
       width: 160px;
       height: 140px;
       object-fit: cover;
@@ -151,32 +162,47 @@ ion-header{
       border-radius: 10px;
     }
 
-    .title{
-      
+    .title {
       position: absolute;
-      bottom: 5px;
+      bottom: 30px;
+      right: 13px;
       color: white;
-     p{
-       font-size: 14px;
-       font-family: "Cairo-Bold";
-     }
+      p {
+        font-size: 14px;
+        margin: 0px;
+        font-family: "Cairo-Bold";
+      }
     }
 
-    .address{
+    .location {
       position: absolute;
       bottom: 5px;
-      color: white;
+      right: 10px;
       font-size: 14px;
       font-family: "Cairo-Regular";
-      .location{
-        right: 10px;
+      ion-icon {
+        font-size: 20px;
       }
+    }
 
-      .location-address{
-
+    .location-address {
+      position: absolute;
+      color: white;
+      font-family: "Cairo-Regular";
+      font-size: 14px;
+      bottom: 9px;
+      right: 30px;
+      p {
+        margin: 0px;
       }
-      .address-detail{
-        left: 10px;
+    }
+
+    .address-detail {
+      position: absolute;
+      bottom: 5px;
+      left: 10px;
+      ion-icon {
+        font-size: 25px;
       }
     }
   }
