--- a/src/app/modules/category-list/category-list.page.html
+++ b/src/app/modules/category-list/category-list.page.html
@@ -1,23 +1,27 @@
 <ion-header class="ion-no-border">
-    <div class="menu-container">
-      <img src="./../../../assets/images/wave app.svg" />
-  
-      <div class="menu-icon" (click)="openMenu()">
-        <img src="./../../../assets/icon/menu.svg" />
-      </div>
-  
-      <div class="menu-title">
-        <p>{{ "categories"|translate}}</p>
-      </div>
-  
-      <div class="back-icon"  routerLink="/tabs/main">
-        <ion-icon name="arrow-forward-outline" color="primary" ></ion-icon>
-      </div>
-    </div>
-  </ion-header>
+  <div class="menu-container">
+    <img src="./../../../assets/images/wave app.svg" />
 
-<ion-content>
-  <ion-card class="ion-no-margin" *ngFor="let cat of categoriesList">
+    <div class="menu-icon" (click)="openMenu()">
+      <img src="./../../../assets/icon/menu.svg" />
+    </div>
+
+    <div class="menu-title">
+      <p>{{ "categories"|translate}}</p>
+    </div>
+
+    <div class="back-icon" routerLink="/tabs/main">
+      <ion-icon name="arrow-forward-outline" color="primary"></ion-icon>
+    </div>
+  </div>
+</ion-header>
+
+<ion-content class="ion-padding">
+  <ion-card
+    class="ion-no-margin"
+    *ngFor="let cat of categoriesList"
+    routerLink="/tabs/main/categories/1/{{cat.id}}"
+  >
     <div class="container">
       <img src="./../../../assets/images/1024-500.png" />
 
@@ -34,10 +38,7 @@
       </div>
 
       <div class="address-detail" routerLink="/tabs/main/category-details">
-        <ion-icon
-          name="arrow-forward-circle-outline"
-          color="white"
-        ></ion-icon>
+        <ion-icon name="arrow-forward-circle-outline" color="white"></ion-icon>
       </div>
     </div>
   </ion-card>
