--- a/src/app/modules/category-list/category-list.page.scss
+++ b/src/app/modules/category-list/category-list.page.scss
@@ -1,55 +1,97 @@
-.container {
+.menu-container {
     position: relative;
-    height: 140px;
     img {
-      width: 160px;
-      height: 140px;
-      object-fit: cover;
-      object-position: initial;
-      border-radius: 10px;
-    }
-
-    .title {
-      position: absolute;
-      bottom: 30px;
-      right: 13px;
-      color: white;
-      p {
-        font-size: 14px;
-        margin: 0px;
-        font-family: "Cairo-Bold";
-      }
-    }
-
-    .location {
-      position: absolute;
-      bottom: 5px;
-      right: 10px;
-      font-size: 14px;
-      font-family: "Cairo-Regular";
-      ion-icon {
-        font-size: 20px;
-      }
-    }
-
-    .location-address {
-      position: absolute;
-      color: white;
-      font-family: "Cairo-Regular";
-      font-size: 14px;
-      bottom: 9px;
-      right: 30px;
-      p {
-        margin: 0px;
-      }
-    }
-
-    .address-detail {
-      position: absolute;
-      bottom: 5px;
-      left: 10px;
-      ion-icon {
-        font-size: 25px;
-      }
+      width: 100%;
     }
   }
+  
+  ion-header {
+    .menu-icon {
+      position: absolute;
+      top: 30%;
+      right: 16px;
+      img {
+        width: 40px;
+        height: 40px;
+      }
+    }
+  
+    .menu-title {
+      position: absolute;
+      top: 37%;
+      right: 18%;
+      font-size: 18px;
+      color: var(--ion-color-primary);
+      font-weight: bold;
+      p {
+        margin: 0px;
+      }
+    }
+    .back-icon {
+        position: absolute;
+        top: 33%;
+        left: 16px;
+        ion-icon {
+          font-size: 25px;
+        }
+      }
+  }
+ion-card{
+    margin-bottom: 16px;
+
+    .container {
+        position: relative;
+        height: 140px;
+        img {
+          width:100%;
+          height: 140px;
+          object-fit: cover;
+          object-position: initial;
+          border-radius: 10px;
+        }
+    
+        .title {
+          position: absolute;
+          bottom: 30px;
+          right: 13px;
+          color: white;
+          p {
+            font-size: 14px;
+            margin: 0px;
+            font-family: "Cairo-Bold";
+          }
+        }
+    
+        .location {
+          position: absolute;
+          bottom: 5px;
+          right: 10px;
+          font-size: 14px;
+          font-family: "Cairo-Regular";
+          ion-icon {
+            font-size: 20px;
+          }
+        }
+    
+        .location-address {
+          position: absolute;
+          color: white;
+          font-family: "Cairo-Regular";
+          font-size: 14px;
+          bottom: 9px;
+          right: 30px;
+          p {
+            margin: 0px;
+          }
+        }
+    
+        .address-detail {
+          position: absolute;
+          bottom: 5px;
+          left: 10px;
+          ion-icon {
+            font-size: 25px;
+          }
+        }
+      }
+}
