--- a/src/app/modules/category-list/category-list.page.html
+++ b/src/app/modules/category-list/category-list.page.html
@@ -20,7 +20,7 @@
   <ion-card
     class="ion-no-margin"
     *ngFor="let cat of categoriesList"
-    routerLink="/tabs/main/categories/1/{{cat.id}}"
+    routerLink="/tabs/main/categories/{{categoryID}}/{{cat.id}}"
   >
     <div class="container">
       <img src="./../../../assets/images/1024-500.png" />
