--- a/src/app/modules/main/main.page.html
+++ b/src/app/modules/main/main.page.html
@@ -17,7 +17,7 @@
     <ion-row
       class="ion-justify-content-center ion-padding-horizontal ion-align-items-stretch"
     >
-      <ion-col size="11">
+      <ion-col size="11" class="search-bar-input">
         <ion-item lines="none" class="search-wrapper">
           <ion-input
             type="text"
@@ -54,13 +54,13 @@
 
   <div class="categories-section ion-padding-horizontal">
     <ion-row>
-      <ion-col size="10" class="ion-align-self-start">
+      <ion-col size="10" class="ion-align-self-start ion-no-padding">
         <h5 class="categories-title">{{"categories"|translate}}</h5>
       </ion-col>
 
       <ion-col
         size="2"
-        class="ion-align-self-end"
+        class="ion-align-self-end ion-no-padding"
         routerLink="/tabs/main/categories"
       >
         <p class="categories-sub-title">{{"show all"|translate}}</p>
@@ -105,7 +105,6 @@
       [dir]="currentlangauge == 'ar' ? 'rtl' : 'ltr'"
     >
       <ng-template swiperSlide *ngFor="let item of categoryItems">
-
         <!-- /tabs/main/categories/1/{{item.id}} -->
 
         <!-- /tabs/main/categories/ cat id=>    1/item id=>   {{item.id}} -->
